Resolved alignment issue due to PF6 changes in console

--- a/src/components/list-pages/ListPage.scss
+++ b/src/components/list-pages/ListPage.scss
@@ -1,3 +1,7 @@
 .cp-list-page-create-link-wrapper {
   padding-left: var(--pf-v5-global--spacer--lg);
 }
+
+.cp-list-page-filter-toolbar {
+  padding-top: var(--pf-v5-global--spacer--lg);
+}
